Cycles panoramic fisheye lens and vector pass problem #31307

Closed
opened 2012-05-05 06:01:18 +02:00 by Adriano Oliveira · 9 comments

%%%In Cycles, when rendering scenes with new panoramic fisheye lens and vector pass and then using vector blur node in compositor, animation motion blur is rendered in wrong crossed directions.%%%

%%%In Cycles, when rendering scenes with new panoramic fisheye lens and vector pass and then using vector blur node in compositor, animation motion blur is rendered in wrong crossed directions.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%brecht, this happens with equirectangular mode even.
my suspicious is the hardcoded orientation the panorama mode(s) have.

any clues?%%%

%%%brecht, this happens with equirectangular mode even. my suspicious is the hardcoded orientation the panorama mode(s) have. any clues?%%%

%%%Speed vectors currently assume the camera transforms can be stored in a matrix, this should be fixed for panorama.%%%

%%%Speed vectors currently assume the camera transforms can be stored in a matrix, this should be fixed for panorama.%%%

%%%ok. it seems that kernel_triangle.h:221~228 needs to handle panorama%%%

%%%ok. it seems that kernel_triangle.h:221~228 needs to handle panorama%%%

%%%Brecht, can you look at the cycles_speed_fix.diff file?

In my mind that should be enough to fix it, however is not working at all
(better to test with the equirectangular mode)%%%

%%%Brecht, can you look at the cycles_speed_fix.diff file? In my mind that should be enough to fix it, however is not working at all (better to test with the equirectangular mode)%%%

%%%Applied a modified version of the patch now, it should work except for fisheye equisolid. Dalai, could you implement direction_to_fisheye_equisolid?%%%

%%%Applied a modified version of the patch now, it should work except for fisheye equisolid. Dalai, could you implement direction_to_fisheye_equisolid?%%%

%%%committed direction to equisolid in rev. 46387
closing now, thanks for reporting Adriano.

Brecht, I think I mixed some func with funcf (e.g. cos, cosf, sin, sinf).
Does it make any difference? cos,sin, ... are using doubles I guess.%%%

%%%committed direction to equisolid in rev. 46387 closing now, thanks for reporting Adriano. Brecht, I think I mixed some func with funcf (e.g. cos, cosf, sin, sinf). Does it make any difference? cos,sin, ... are using doubles I guess.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%I always use the f functions to be sure, but in C++ actually it will not use the doubles function, it can automatically use the float ones.%%%

%%%I always use the f functions to be sure, but in C++ actually it will not use the doubles function, it can automatically use the float ones.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31307
No description provided.